<resources>
    <string name="app_name">KMA Shot</string>
    
    <!-- Main Menu -->
    <string name="menu_start">BẮT ĐẦU</string>
    <string name="menu_highscore">ĐIỂM CAO</string>
    <string name="menu_tutorial">HƯỚNG DẪN</string>
    <string name="menu_settings">CÀI ĐẶT</string>
    <string name="menu_exit">THOÁT</string>
    
    <!-- High Score -->
    <string name="highscore_title">BẢNG ĐIỂM CAO</string>
    <string name="back">QUAY LẠI</string>
    
    <!-- Tutorial -->
    <string name="tutorial_title">HƯỚNG DẪN CHƠI</string>
    
    <!-- Settings -->
    <string name="settings_title">CÀI ĐẶT</string>
    <string name="music_volume">Âm lượng nhạc</string>
    <string name="sound_effects">Hiệu ứng âm thanh</string>
    
    <!-- Game Modes -->
    <string name="game_mode_title">CHỌN CHẾ ĐỘ CHƠI</string>
    <string name="mode_classic">CHẾ ĐỘ CLASSIC</string>
    <string name="mode_classic_desc">Chế độ cổ điển với gạch cơ bản</string>
    <string name="mode_survival">CHẾ ĐỘ SURVIVAL</string>
    <string name="mode_survival_desc">Sinh tồn với gạch liên tục rơi xuống</string>
    <string name="mode_boss">CHẾ ĐỘ BOSS</string>
    <string name="mode_boss_desc">Đối đầu với các boss mạnh mẽ</string>
    <string name="mode_endless">CHẾ ĐỘ ENDLESS</string>
    <string name="mode_endless_desc">Chơi không giới hạn, đạt điểm cao nhất</string>
</resources>